--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx wdio run wdio.conf.js"
+    "test": "npm run wdio && npm run report",
+    "report": "allure generate allure-results/ --clean && allure open",
+    "wdio": "npx wdio run wdio.conf.js"
   },
-  "keywords": [],
+  "keywords": ["wdio", "qa", "automation"],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
+    "@wdio/allure-reporter": "^6.4.7",
     "@wdio/cli": "^6.4.7",
     "@wdio/local-runner": "^6.4.7",
     "@wdio/mocha-framework": "^6.4.7",
