--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npm run wdio && npm run report",
-    "report": "allure generate allure-results/ --clean && allure open",
-    "wdio": "npx wdio run wdio.conf.js"
+    "test": "npx wdio run wdio.conf.js",
+    "report": "allure generate allure-results/ --clean && allure open"
   },
   "keywords": ["wdio", "qa", "automation"],
   "author": "",
